--- a/index.html
+++ b/index.html
@@ -2,21 +2,22 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Chengjiu Du Canvas Project</title>
-<style type="text/css">
-canvas {
-    border: none;
-
-}
-body{
-    margin:0;
-}
-</style>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="main.css">
 </head>
+
+
 <body>
+<header class="site-header">
+<p>Click and move anywhere on the screen!</p>
+</header>
 <canvas></canvas>
 
-
 <script src="canvas.js"></script>
+<footer class="site-footer">
+<p>© 2020 Chengjiu Du</p>
+</footer>
 </body>
 </html>
